--- a/templates/produtos.html
+++ b/templates/produtos.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos</title>
-</head>
-<body>
-    <h1>Produtos</h1>
+{% extends "base.html" %}
 
-    {% for produto in produtos %}
-        <h2>{{ produto.nome }}</h2>
-        <p>{{ produto.descricao }}</p>
-    {% endfor %}
+{% block title %}Produtos{% endblock %}
 
-
-</body>
-</html>
+{% block content %}
+<h1>Produtos</h1>
+{% for produto in produtos %}
+    <h2>{{ produto.nome }}</h2>
+    <p>{{ produto.descricao }}</p>
+    <a href="/produtos/{{ produto.nome }}">Ver detalhes</a>
+{% endfor %}
+{% endblock %}
